--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photo Gallery JemgDev</title>
+    <title>Photo Gallery JosueEMG</title>
     {{!-- BOOSTRAP --}}
     <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
