--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 </head>
 
-<body>
+<body style="overflow: scroll;">
     {{> navigation }}    
     <div class="container p-4">
         {{{ body }}}
