--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -11,8 +11,34 @@
     {{!-- SWIPER --}}
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 </head>
+<style>
+    body {
+      background: #fff;
+      font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+      font-size: 14px;
+      color: #000;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
 
-<body style="overflow: scroll;">
+    .swiper-container {
+      width: 100%;
+      height: 60vh;
+      padding-top: 50px;
+      padding-bottom: 50px;
+    }
+
+    .swiper-slide {
+      background-position: center;
+      background-size: cover;
+      width: 300px;
+      height: 350px;
+    }
+
+</style>
+<body>
+    
     {{> navigation }}    
     <div class="container p-4">
         {{{ body }}}
