--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -19,7 +19,11 @@
       color: #000;
       margin: 0;
       padding: 0;
-      overflow: hidden;
+      overflow-x: hidden;
+    }
+
+    ::-webkit-scrollbar { 
+        display: none;
     }
 
     .swiper-container {
